// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearable 1`] = `
<div class="van-cell van-field">
  <div class="van-cell__value van-cell__value--alone">
    <div class="van-field__body"><input type="text" class="van-field__control"></div>
  </div>
</div>
`;

exports[`clearable 2`] = `
<div class="van-cell van-field">
  <div class="van-cell__value van-cell__value--alone">
    <div class="van-field__body"><input type="text" class="van-field__control"><i class="van-icon van-icon-clear van-field__clear">
        <!----></i></div>
  </div>
</div>
`;

exports[`render label slot 1`] = `
<div class="van-cell van-field">
  <div class="van-cell__title van-field__label">Custom Label</div>
  <div class="van-cell__value">
    <div class="van-field__body"><input type="text" class="van-field__control"></div>
  </div>
</div>
`;

exports[`render right icon with icon prop for old version 1`] = `
<div class="van-cell van-field">
  <div class="van-cell__value van-cell__value--alone">
    <div class="van-field__body"><input type="text" class="van-field__control">
      <div class="van-field__right-icon"><i class="van-icon van-icon-success">
          <!----></i></div>
    </div>
  </div>
</div>
`;

exports[`render textarea 1`] = `
<div class="van-cell van-field">
  <div class="van-cell__value van-cell__value--alone">
    <div class="van-field__body"><textarea class="van-field__control" style="height: auto;"></textarea></div>
  </div>
</div>
`;

exports[`size prop 1`] = `
<div class="van-cell van-cell--large van-field">
  <div class="van-cell__value van-cell__value--alone">
    <div class="van-field__body"><input type="text" class="van-field__control"></div>
  </div>
</div>
`;
